@@ -300,6 +300,7 @@ this. Was used when mwEmbed was going to be an extension.
 * (bug 18751) Fix for buggage in profiling setup for some extensions on PHP 5.1
 * (bug 17139) ts_resortTable inconsistent trimming makes date sorting fragile
 * (bug 19445) Change oldimage table to use ON UPDATE CASCADE for FK to image table.
+* (bug 14080) Short notation links to subpages didn't work in edit summaries
 
 == API changes in 1.16 ==
 
